--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
         "express": "2.5.8",
         "stylus": ">= 0.0.1",
         "jade": ">= 0.0.1",
+        "bcrypt": ">= 0.5.0",        
         "mongodb": ">= 0.1.0",
-        "socket.io": ">= 0.9.6"    
+        "moment" : ">=1.6.2",        
+        "emailjs": ">= 0.2.9",
+        "socket.io": ">= 0.9.6"        
   },
     "engines": {
         "node": "0.6.17",
