--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "express": "2.5.8",
         "stylus": ">= 0.0.1",
+        "nib": ">= 0.7.0",
         "jade": ">= 0.0.1",
         "bcrypt": ">= 0.5.0",
         "mongodb": ">= 0.1.0",
