removing node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
 .DS_Store
-node_modules/emailjs
-node_modules/express
-node_modules/jade
-node_modules/moment
-node_modules/mongodb
-node_modules/nib
-node_modules/socket.io
-node_modules/stylus
+node_modules
