--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-    "name": "app.bridge",
-    "version": "1.0.0",
-    "description": "A platform for recording and exchanging civic related data in real-time",
-    "author": {
-        "name": "Stephen Braitsch",
-        "email": "stephen@braitsch.io"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git@bitbucket.org:braitsch/bridge-app.git"
-    },
-    "private": true,
-    "dependencies": {
-        "express": "2.5.8",
-        "stylus": ">= 0.29.0",
-        "nib": ">= 0.7.0",
-        "jade": ">= 0.27.5",
-        "bcrypt": ">= 0.7.2",
-        "mongodb": ">= 1.1.x",
-        "moment" : ">=1.7.x",
-        "emailjs": ">= 0.3.x",
-        "socket.io": ">= 0.9.10"
-  },
-    "engines": {
-        "node": "0.8.x",
-        "npm":  "1.1.x"
-    }
+	"name": "bridge",
+	"version": "1.1.0",
+	"description": "A platform for recording and exchanging civic related data in real-time",
+	"author": {
+		"name": "Stephen Braitsch",
+		"email": "stephen@braitsch.io"
+	},
+	"website":{
+		"url": "bridge.braitsch.io"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git@bitbucket.org:braitsch/bridge-app.git"
+	},
+	"private": true,
+	"dependencies": {
+		"express": "3.0.6",
+		"stylus": "0.31.0",
+		"jade": "0.27.7",
+		"mongodb": "1.2.7",
+		"moment" : "1.7.2",
+		"nib": " 0.7.0",
+		"emailjs": "0.3.3",
+		"socket.io": "0.9.14"
+	},
+	"engines": {
+		"node": "0.8.14",
+		"npm":  "1.1.65"
+	}
 }
